Added registration error alert, password reset link, Register info modal, and updated link CSS

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,11 @@ body {
   text-align: left;
 }
 
+.blue-link {
+  color: Blue;
+  text-decoration: none;
+}
+
 /* Google Icons */
 
 .material-symbols-outlined {
